--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ main {
   margin-top: 275px;
 }
 
-.card-circle-filled{
+/* .card-circle-filled{
   background-color: var(--white);
   height: 30px;
   width: 30px;
@@ -68,9 +68,9 @@ main {
   position: absolute;
   top: 25px;
   left: 25px;
-}
+} */
 
-.card-circle-unfilled{
+/* .card-circle-unfilled{
   border: 1px solid var(--white);
   height: 15px;
   width: 15px;
@@ -81,6 +81,14 @@ main {
   position: absolute;
   top: 33px;
   left: 70px;
+} */
+
+.card-logo{
+  position: absolute;
+  position: absolute;
+  top: 15px;
+  left: 25px;
+  height: 35px;
 }
 
 .card-number{
@@ -123,6 +131,7 @@ main {
   grid-template-columns: 1fr minmax(400px, 1fr) 1fr;
 }
 
+/* TODO poner nombre que también vaya para el state complete */
 .form-placement{
   grid-area: 1/2;
 }
@@ -133,6 +142,10 @@ main {
   gap: 1rem;
 }
 
+.hide-form{
+  display: none;
+}
+
 .label-input-layout{
   display: flex;
   flex-direction: column;
@@ -141,14 +154,17 @@ main {
 
 .form-last-section{
   display: grid;
-  grid-template-columns: calc(200px - 0.25rem) calc(200px - 0.25rem);
-  gap: 0.5rem;
+  grid-template-columns: 100px 100px 200px;
 }
 
-.form-1-column{
+.date-column{
   display: grid;
-  grid-template-columns: calc(100px - 0.25rem) calc(100px - 0.25rem);
-  gap: 0.5rem;
+  grid-template-columns: calc(100px - 0.2rem) calc(100px - 0.2rem);
+  gap: 0.4rem;
+}
+
+.cvcPlacement{
+  grid-area: 1/3;
 }
 
 .column-span{
@@ -164,11 +180,32 @@ main {
   color: var(--very-dark-violet);
 }
 
-:focus{
+.input-width-dates{
+  width: calc(100px - 0.2rem);
+}
+
+.input-width-cvc{
+  width: calc(200px - 0.2rem);
+}
+
+.error{
+  font-size: 12px;
+  color: var(--error-red);
+}
+
+.display-error{
+  display: block;
+}
+
+.hide-error{
+  display: none;
+}
+
+input:focus{
   border: 1px solid var(--active-input-border);
 }
 
-.confirm-button{
+.action-button{
   margin-top: 1.5rem;
   background-color: var(--very-dark-violet);
   color: var(--white);
@@ -176,6 +213,27 @@ main {
   border-radius: 0.25rem;
   border: 1px solid var(--very-dark-violet);
   cursor: pointer;
+  width: 100%;
+}
+
+.display-completed-state{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hide-completed-state{
+  display: none
+}
+
+.complete-state-layout{
+  
+}
+
+.card-detail-thank-you{
+  color: var(--light-grayish-violet);
+  margin-top: 0;
+  font-size: 14px;
 }
 
 .attribution {
